Working Copy Git

--- a/studentreg/manifest/package.xml
+++ b/studentreg/manifest/package.xml
@@ -32,5 +32,13 @@
         <members>*</members>
         <name>StaticResource</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+  <members>*</members>
+  <name>FlexiPage</name>
+   </types>
     <version>57.0</version>
 </Package>
